--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -43,7 +43,7 @@ body h6 * {
   font-family: inherit;
   font-weight: inherit;
 }
-body p, body .section-label,
+body p, body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link, body .section-label,
 body ul li,
 body input,
 body textarea,
@@ -68,6 +68,7 @@ body h4,
 body h5,
 body h6,
 body p,
+body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link,
 body .section-label {
   padding: 0;
 }
@@ -78,6 +79,7 @@ body h4,
 body h5,
 body h6,
 body p,
+body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link,
 body .section-label,
 body li {
   color: #fafafa;
@@ -90,6 +92,7 @@ body h5,
 body h6,
 body a,
 body p,
+body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link,
 body .section-label,
 body button {
   margin: 0;
@@ -199,14 +202,14 @@ body h6 {
     letter-spacing: 0.2px;
   }
 }
-body p, body .section-label,
+body p, body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link, body .section-label,
 body li {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 }
 @media screen and (max-width: 767px) {
-  body p, body .section-label,
+  body p, body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link, body .section-label,
   body li {
     font-size: 14px;
     line-height: 20px;
@@ -348,6 +351,314 @@ body .bold {
 
 body .text-center {
   text-align: center;
+}
+
+body header.header {
+  position: fixed;
+  width: 100%;
+  max-width: 100vw;
+  z-index: 999;
+  padding: 20px 0;
+}
+@media screen and (max-width: 767px) {
+  body header.header {
+    max-height: 75px;
+  }
+}
+body header.header nav.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body header.header nav.navbar .menu-area {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+@media screen and (max-width: 767px) {
+  body header.header nav.navbar .menu-area {
+    display: none;
+  }
+}
+body header.header nav.navbar .menu-area.left-side-menu {
+  justify-content: flex-start;
+}
+body header.header nav.navbar .menu-area.right-side-menu {
+  justify-content: flex-end;
+}
+body header.header nav.navbar .menu-area ul.menu-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link {
+  color: #fafafa;
+  position: relative;
+  text-transform: uppercase;
+  transition: 550ms all ease;
+  font-weight: 500;
+}
+body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:after {
+  content: "";
+  position: absolute;
+  display: block;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  transform: translateY(3px);
+  background-color: #fafafa;
+  border-radius: 3px;
+  transition: 550ms all ease;
+}
+body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:hover, body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus, body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus-visible {
+  transition: 550ms all ease;
+  color: #858585;
+}
+body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:hover::after, body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus::after, body header.header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus-visible::after {
+  background-color: #858585;
+  transition: 550ms all ease;
+}
+body header.header nav.navbar .brand-area {
+  max-width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 120px;
+}
+@media screen and (max-width: 1199px) {
+  body header.header nav.navbar .brand-area {
+    margin: 0 100px;
+  }
+}
+@media screen and (max-width: 991px) {
+  body header.header nav.navbar .brand-area {
+    margin: 0 80px;
+  }
+}
+@media screen and (max-width: 767px) {
+  body header.header nav.navbar .brand-area {
+    margin: 0;
+    width: 100%;
+    max-width: 100%;
+    justify-content: space-between;
+  }
+}
+body header.header nav.navbar .brand-area a.logo-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+}
+body header.header nav.navbar .brand-area a.logo-link img.brand-logo {
+  width: auto;
+  height: 100%;
+  transition: 550ms all ease;
+}
+body header.header nav.navbar .brand-area a.toggle-btn {
+  display: none;
+  font-size: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
+  position: relative;
+  color: #fafafa;
+}
+@media screen and (max-width: 767px) {
+  body header.header nav.navbar .brand-area a.toggle-btn {
+    display: block;
+  }
+}
+body header.header nav.navbar .brand-area a.toggle-btn::after {
+  content: "";
+  width: 100%;
+  display: block;
+  height: 2px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: translateY(5px);
+  background-color: #fafafa;
+}
+body header.header nav.navbar .brand-area a.toggle-btn span {
+  color: inherit;
+}
+body header.header .mobile-menu {
+  display: none;
+  position: fixed;
+  padding: 100px 20px 20px;
+  width: 100%;
+  height: calc(100vh - 75px);
+  transform: translateX(150%);
+  transition: 750ms all ease;
+  overflow-y: auto;
+  top: 75px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fafafa;
+  z-index: 999;
+}
+@media screen and (max-width: 767px) {
+  body header.header .mobile-menu {
+    display: flex;
+    flex-direction: column;
+  }
+}
+body header.header .mobile-menu ul.mobile-menu-list {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 36px;
+}
+body header.header .mobile-menu ul.mobile-menu-list li.menu-itm {
+  transform: translateX(150px);
+  transition: 550ms all ease;
+}
+body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link {
+  font-size: 36px;
+  line-height: 50.4px;
+  letter-spacing: -0.72px;
+  font-weight: 500;
+  text-transform: uppercase;
+  position: relative;
+  color: #0c0c0c;
+}
+body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #0c0c0c;
+  transform: translateY(5px);
+}
+body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link:hover, body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link:focus, body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link:focus-visible {
+  color: #858585;
+}
+body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link:hover::after, body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link:focus::after, body header.header .mobile-menu ul.mobile-menu-list li.menu-itm a.menu-link:focus-visible::after {
+  background-color: #858585;
+}
+body header.header .mobile-menu ul.social-link-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+body header.header .mobile-menu ul.social-link-list li.social-itm .social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body header.header .mobile-menu ul.social-link-list li.social-itm .social-link .social-icon {
+  filter: brightness(0);
+}
+body header.header.colored-header {
+  background-color: rgba(250, 250, 250, 0.55);
+  backdrop-filter: blur(5px) brightness(0.95);
+}
+body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link {
+  color: #0c0c0c;
+}
+body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:after {
+  background-color: #0c0c0c;
+}
+body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:hover, body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus, body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus-visible {
+  transition: 550ms all ease;
+  color: #fafafa;
+}
+body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:hover::after, body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus::after, body header.header.colored-header nav.navbar .menu-area ul.menu-wrapper li.menu-itm a.menu-link:focus-visible::after {
+  background-color: #fafafa;
+  transition: 550ms all ease;
+}
+body header.header.colored-header nav.navbar .brand-area .logo-link img.brand-logo {
+  filter: brightness(0);
+  transition: 550ms all ease;
+}
+body header.header.colored-header nav.navbar .brand-area a.toggle-btn {
+  color: #0c0c0c;
+}
+body header.header.colored-header nav.navbar .brand-area a.toggle-btn::after {
+  background-color: #0c0c0c;
+}
+body header.header.open-mobile-header {
+  background-color: #fafafa;
+  transition: 750ms all ease;
+}
+body header.header.open-mobile-header nav.navbar .brand-area .logo-link img.brand-logo {
+  filter: brightness(0);
+  transition: 550ms all ease;
+}
+body header.header.open-mobile-header nav.navbar .brand-area a.toggle-btn {
+  color: #0c0c0c;
+}
+body header.header.open-mobile-header nav.navbar .brand-area a.toggle-btn::after {
+  background-color: #0c0c0c;
+}
+body header.header.open-mobile-header .mobile-menu {
+  transform: translateX(0);
+}
+body header.header.open-mobile-header .mobile-menu ul.mobile-menu-list .menu-itm {
+  transform: translateX(0);
+}
+body header.header.open-mobile-header .mobile-menu ul.mobile-menu-list .menu-itm:nth-child(1) {
+  transition: 800ms transform ease;
+}
+body header.header.open-mobile-header .mobile-menu ul.mobile-menu-list .menu-itm:nth-child(2) {
+  transition: 1000ms transform ease;
+}
+body header.header.open-mobile-header .mobile-menu ul.mobile-menu-list .menu-itm:nth-child(3) {
+  transition: 1200ms transform ease;
+}
+body header.header.open-mobile-header .mobile-menu ul.mobile-menu-list .menu-itm:nth-child(4) {
+  transition: 1400ms transform ease;
+}
+
+body main.main-content section {
+  /* Hero Section */
+  /* Hero Section ends here */
+}
+body main.main-content section.hero-section-wrap .hero-section {
+  background-size: cover;
+  background-position: center;
+}
+body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper {
+  height: 90vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 102px;
+}
+@media screen and (max-width: 1199px) {
+  body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper {
+    padding-bottom: 80px;
+  }
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper {
+    padding-bottom: 64px;
+  }
+}
+@media screen and (max-width: 767px) {
+  body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper {
+    padding-bottom: 54px;
+  }
+}
+@media screen and (max-width: 543px) {
+  body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper {
+    padding-bottom: 30px;
+  }
+}
+body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper .hero-content {
+  text-align: center;
+}
+body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper .hero-content h1 {
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=main.css.map */
