--- a/assets/styling/scss/comps/_header.scss
+++ b/assets/styling/scss/comps/_header.scss
@@ -1,5 +1,326 @@
 body {
   header.header {
-    // Header css
+    position: fixed;
+    width: 100%;
+    max-width: 100vw;
+    z-index: 999;
+    padding: 20px 0;
+
+    @media screen and (max-width: 767px) {
+      max-height: 75px;
+    }
+
+    nav.navbar {
+      @include flex-center;
+      justify-content: space-between;
+
+      .menu-area {
+        @include flex-center;
+        flex: 1;
+
+        @media screen and (max-width: 767px) {
+          display: none;
+        }
+
+        &.left-side-menu {
+          justify-content: flex-start;
+        }
+
+        &.right-side-menu {
+          justify-content: flex-end;
+        }
+
+        ul.menu-wrapper {
+          @include flex-center;
+          justify-content: space-between;
+          width: 100%;
+
+          li.menu-itm {
+            a.menu-link {
+              color: $dg-primary;
+              position: relative;
+              text-transform: uppercase;
+              transition: $transition;
+
+              @extend p;
+              font-weight: $medium;
+
+              &:after {
+                content: "";
+                position: absolute;
+                display: block;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                height: 1px;
+                transform: translateY(3px);
+                background-color: $dg-primary;
+                border-radius: 3px;
+                transition: $transition;
+              }
+
+              &:hover,
+              &:focus,
+              &:focus-visible {
+                transition: $transition;
+                color: $hover-grey;
+
+                &::after {
+                  background-color: $hover-grey;
+                  transition: $transition;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .brand-area {
+        max-width: 100px;
+        @include flex-center;
+        justify-content: center;
+        margin: 0 120px;
+
+        @media screen and (max-width: 1199px) {
+          margin: 0 100px;
+        }
+        @media screen and (max-width: 991px) {
+          margin: 0 80px;
+        }
+        @media screen and (max-width: 767px) {
+          margin: 0;
+          width: 100%;
+          max-width: 100%;
+          justify-content: space-between;
+        }
+
+        a.logo-link {
+          @include flex-center;
+          justify-content: center;
+          height: 35px;
+
+          img.brand-logo {
+            width: auto;
+            height: 100%;
+            transition: $transition;
+          }
+        }
+
+        a.toggle-btn {
+          display: none;
+          font-size: 22px;
+          font-weight: $medium;
+          text-transform: uppercase;
+          position: relative;
+          color: $dg-primary;
+
+          @media screen and (max-width: 767px) {
+            display: block;
+          }
+
+          &::after {
+            content: "";
+            width: 100%;
+            display: block;
+            height: 2px;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            transform: translateY(5px);
+            background-color: $dg-primary;
+          }
+
+          span {
+            color: inherit;
+          }
+        }
+      }
+    }
+
+    .mobile-menu {
+      display: none;
+      position: fixed;
+      padding: 100px 20px 20px;
+      width: 100%;
+      height: calc(100vh - 75px);
+      transform: translateX(150%);
+      transition: $transition-slow;
+      overflow-y: auto;
+      top: 75px;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: $dg-primary;
+      z-index: 999;
+
+      @media screen and (max-width: 767px) {
+        display: flex;
+        flex-direction: column;
+      }
+
+      ul {
+        &.mobile-menu-list {
+          flex: 1;
+          @include flex-column;
+          align-items: flex-start;
+          row-gap: 36px;
+
+          li.menu-itm {
+            transform: translateX(150px);
+            transition: $transition;
+
+            a.menu-link {
+              font-size: 36px;
+              line-height: 50.4px;
+              letter-spacing: -0.72px;
+              font-weight: $medium;
+              text-transform: uppercase;
+              position: relative;
+              color: $dg-secondary;
+
+              &::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 1px;
+                position: absolute;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background-color: $dg-secondary;
+                transform: translateY(5px);
+              }
+
+              &:hover,
+              &:focus,
+              &:focus-visible {
+                color: $hover-grey;
+
+                &::after {
+                  background-color: $hover-grey;
+                }
+              }
+            }
+          }
+        }
+        &.social-link-list {
+          @include flex-wrap;
+          gap: 15px;
+
+          li.social-itm {
+            .social-link {
+              @include flex-center;
+              justify-content: center;
+
+              .social-icon {
+                filter: brightness(0);
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &.colored-header {
+      background-color: rgba($dg-primary, 0.55);
+      backdrop-filter: blur(5px) brightness(0.95);
+
+      nav.navbar {
+        .menu-area {
+          ul.menu-wrapper {
+            li.menu-itm {
+              a.menu-link {
+                color: $dg-secondary;
+
+                &:after {
+                  background-color: $dg-secondary;
+                }
+
+                &:hover,
+                &:focus,
+                &:focus-visible {
+                  transition: $transition;
+                  // color: $hover-grey;
+                  color: $dg-primary;
+
+                  &::after {
+                    // background-color: $hover-grey;
+                    background-color: $dg-primary;
+                    transition: $transition;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .brand-area {
+          .logo-link {
+            img.brand-logo {
+              filter: brightness(0);
+              transition: $transition;
+            }
+          }
+
+          a.toggle-btn {
+            color: $dg-secondary;
+
+            &::after {
+              background-color: $dg-secondary;
+            }
+          }
+        }
+      }
+    }
+
+    &.open-mobile-header {
+      background-color: $dg-primary;
+      transition: $transition-slow;
+
+      nav.navbar {
+        .brand-area {
+          .logo-link {
+            img.brand-logo {
+              filter: brightness(0);
+              transition: $transition;
+            }
+          }
+
+          a.toggle-btn {
+            color: $dg-secondary;
+
+            &::after {
+              background-color: $dg-secondary;
+            }
+          }
+        }
+      }
+
+      .mobile-menu {
+        transform: translateX(0);
+
+        ul {
+          &.mobile-menu-list {
+            .menu-itm {
+              transform: translateX(0);
+
+              &:nth-child(1) {
+                transition: 800ms transform ease;
+              }
+              &:nth-child(2) {
+                transition: 1000ms transform ease;
+              }
+              &:nth-child(3) {
+                transition: 1200ms transform ease;
+              }
+              &:nth-child(4) {
+                transition: 1400ms transform ease;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
