--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -621,6 +621,8 @@ body header.header.open-mobile-header .mobile-menu ul.mobile-menu-list .menu-itm
 body main.main-content section {
   /* Hero Section */
   /* Hero Section ends here */
+  /* About Us Section */
+  /* About Us Section ends here */
 }
 body main.main-content section.hero-section-wrap .hero-section {
   background-size: cover;
@@ -649,7 +651,7 @@ body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper 
     padding-bottom: 54px;
   }
 }
-@media screen and (max-width: 543px) {
+@media screen and (max-width: 479px) {
   body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper {
     padding-bottom: 30px;
   }
@@ -659,6 +661,112 @@ body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper 
 }
 body main.main-content section.hero-section-wrap .hero-section .overlay-wrapper .hero-content h1 {
   text-transform: uppercase;
+}
+body main.main-content section.about-section-wrap {
+  padding: 90px 0;
+}
+@media screen and (max-width: 1199px) {
+  body main.main-content section.about-section-wrap {
+    padding: 82px 0;
+  }
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.about-section-wrap {
+    padding: 68px 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  body main.main-content section.about-section-wrap {
+    padding: 52px 0;
+  }
+}
+@media screen and (max-width: 479px) {
+  body main.main-content section.about-section-wrap {
+    padding: 27px 0;
+  }
+}
+body main.main-content section.about-section-wrap .about-section .about-inner-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 0;
+  row-gap: 27px;
+}
+body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area {
+  display: flex;
+  align-items: center;
+  gap: 27px;
+  width: 50%;
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area {
+    width: 100%;
+  }
+}
+body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img {
+    height: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img.img-left {
+    aspect-ratio: 187/226;
+  }
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img.img-left {
+    width: calc(40% - 13.5px);
+  }
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img.img-left img {
+    transform: scale(1.4);
+  }
+}
+@media screen and (min-width: 992px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img.img-right {
+    aspect-ratio: 280/453;
+  }
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img.img-right {
+    width: calc(60% - 13.5px);
+  }
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img.img-right img {
+    transform: scale(1.6);
+  }
+}
+body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .media-area figure.about-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center top;
+  transform: scale(1.2);
+}
+body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .content-area {
+  width: 50%;
+  padding: 0 65px;
+}
+@media screen and (max-width: 1199px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .content-area {
+    padding: 0 50px;
+  }
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .content-area {
+    padding: 0;
+    width: 100%;
+  }
+}
+body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .content-area .content-text {
+  margin-top: 35px;
+}
+@media screen and (max: 991px) {
+  body main.main-content section.about-section-wrap .about-section .about-inner-wrapper .content-area .content-text {
+    margin-top: 20px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
