--- a/assets/styling/scss/_typography.scss
+++ b/assets/styling/scss/_typography.scss
@@ -116,7 +116,7 @@ body {
     line-height: 1;
     letter-spacing: -1.32px;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: $breakpoint-lg) {
       font-size: 56px;
       letter-spacing: 0;
     }
@@ -132,7 +132,7 @@ body {
     line-height: 63px;
     letter-spacing: -0.6px;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: $breakpoint-lg) {
       font-size: 46px;
       line-height: 49px;
       letter-spacing: -0.46px;
@@ -150,7 +150,7 @@ body {
     line-height: 54px;
     letter-spacing: -0.49px;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: $breakpoint-lg) {
       font-size: 40px;
       line-height: 48px;
       letter-spacing: 0;
@@ -168,7 +168,7 @@ body {
     line-height: 1;
     letter-spacing: -0.36px;
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (max-width: $breakpoint-lg) {
       font-size: 32px;
       letter-spacing: 0;
     }
