--- a/assets/styling/scss/pages/_home.scss
+++ b/assets/styling/scss/pages/_home.scss
@@ -14,16 +14,16 @@ body {
             justify-content: flex-end;
             padding-bottom: 102px;
 
-            @media screen and (max-width: 1199px) {
+            @media screen and (max-width: $breakpoint-lg) {
               padding-bottom: 80px;
             }
-            @media screen and (max-width: 991px) {
+            @media screen and (max-width: $breakpoint-md) {
               padding-bottom: 64px;
             }
-            @media screen and (max-width: 767px) {
+            @media screen and (max-width: $breakpoint-sm) {
               padding-bottom: 54px;
             }
-            @media screen and (max-width: 543px) {
+            @media screen and (max-width: $breakpoint-xsm) {
               padding-bottom: 30px;
             }
 
@@ -37,7 +37,109 @@ body {
           }
         }
       }
-      /* Hero Section ends here */      
+      /* Hero Section ends here */
+
+      /* About Us Section */
+      &.about-section-wrap {
+        padding: 90px 0;
+
+        @media screen and (max-width: $breakpoint-lg) {
+          padding: 82px 0;
+        }
+        @media screen and (max-width: $breakpoint-md) {
+          padding: 68px 0;
+        }
+        @media screen and (max-width: $breakpoint-sm) {
+          padding: 52px 0;
+        }
+        @media screen and (max-width: $breakpoint-xsm) {
+          padding: 27px 0;
+        }
+
+        .about-section {
+          .about-inner-wrapper {
+            @include flex-wrap;
+            column-gap: 0;
+            row-gap: 27px;
+
+            .media-area {
+              @include flex-center;
+              gap: 27px;
+              width: 50%;
+
+              @media screen and (max-width: $breakpoint-md) {
+                width: 100%;
+              }
+
+              figure.about-img {
+                padding: 0;
+                margin: 0;
+                overflow: hidden;
+
+                @media screen and (max-width: $breakpoint-md) {
+                  height: 100%;
+                }
+
+                &.img-left {
+                  @media screen and (min-width: 992px) {
+                    aspect-ratio: 187/226;
+                  }
+
+                  @media screen and (max-width: $breakpoint-md) {
+                    width: calc(40% - 13.5px);
+
+                    img {
+                      transform: scale(1.4);
+                    }
+                  }
+                }
+                &.img-right {
+                  @media screen and (min-width: 992px) {
+                    aspect-ratio: 280/453;
+                  }
+                  @media screen and (max-width: $breakpoint-md) {
+                    width: calc(60% - 13.5px);
+
+                    img {
+                      transform: scale(1.6);
+                    }
+                  }
+                }
+
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  object-position: center top;
+                  transform: scale(1.2);
+                }
+              }
+            }
+
+            .content-area {
+              width: 50%;
+              padding: 0 65px;
+
+              @media screen and (max-width: $breakpoint-lg) {
+                padding: 0 50px;
+              }
+              @media screen and (max-width: $breakpoint-md) {
+                padding: 0;
+                width: 100%;
+              }
+
+              .content-text {
+                margin-top: 35px;
+
+                @media screen and (max: $breakpoint-md) {
+                  margin-top: 20px;
+                }
+              }
+            }
+          }
+        }
+      }
+      /* About Us Section ends here */
     }
   }
 }
