--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -618,13 +618,6 @@ body header.header.open-mobile-header .mobile-menu ul.mobile-menu-list .menu-itm
   transition: 1400ms transform ease;
 }
 
-body main.main-content section {
-  /* Hero Section */
-  /* Hero Section ends here */
-  /* About Us Section */
-  /* About Us Section ends here */
-  /* Portfolio Section */
-}
 body main.main-content section.hero-section-wrap .hero-section {
   background-size: cover;
   background-position: center;
@@ -769,35 +762,91 @@ body main.main-content section.about-section-wrap .about-section .about-inner-wr
     margin-top: 20px;
   }
 }
-body main.main-content section.portfolio-section-wrap .corporate-portfolio-section .corporate-portfolio-inner-wrapper:not(.slick-initialized) {
+body main.main-content section.portfolio-section-wrap div.corporate-portfolio-section .corporate-portfolio-inner-wrapper:not(.slick-initialized) {
   display: flex;
   align-items: center;
   overflow-x: auto;
 }
-body main.main-content section.portfolio-section-wrap .corporate-portfolio-section .corporate-portfolio-inner-wrapper .slick-track {
+body main.main-content section.portfolio-section-wrap div.corporate-portfolio-section .corporate-portfolio-inner-wrapper .slick-track {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-body main.main-content section.portfolio-section-wrap .corporate-portfolio-section .corporate-portfolio-inner-wrapper .corporate-portfolio-itm {
+body main.main-content section.portfolio-section-wrap div.corporate-portfolio-section .corporate-portfolio-inner-wrapper .corporate-portfolio-itm {
   aspect-ratio: 1;
   padding: 10px 25px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-body main.main-content section.portfolio-section-wrap .corporate-portfolio-section .corporate-portfolio-inner-wrapper .corporate-portfolio-itm img.portfolio-logo {
+@media screen and (max-width: 767px) {
+  body main.main-content section.portfolio-section-wrap div.corporate-portfolio-section .corporate-portfolio-inner-wrapper .corporate-portfolio-itm {
+    padding: 6px 12px;
+  }
+}
+body main.main-content section.portfolio-section-wrap div.corporate-portfolio-section .corporate-portfolio-inner-wrapper .corporate-portfolio-itm img.portfolio-logo {
   width: 100%;
   height: auto;
   transition: 550ms all ease;
   filter: grayscale(1);
   opacity: 0.6;
 }
-body main.main-content section.portfolio-section-wrap .corporate-portfolio-section .corporate-portfolio-inner-wrapper .corporate-portfolio-itm:hover img.portfolio-logo {
+body main.main-content section.portfolio-section-wrap div.corporate-portfolio-section .corporate-portfolio-inner-wrapper .corporate-portfolio-itm:hover img.portfolio-logo {
   transition: 550ms all ease;
   filter: grayscale(0);
   opacity: 1;
   cursor: pointer;
+}
+body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper {
+  padding: 50px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+@media screen and (max-width: 991px) {
+  body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper {
+    padding: 30px 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper {
+    padding: 20px 0;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+}
+@media screen and (max-width: 479px) {
+  body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper .portfolio-column {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+@media screen and (max-width: 767px) {
+  body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper .portfolio-column {
+    gap: 15px;
+  }
+  body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper .portfolio-column:nth-child(3) {
+    display: none;
+  }
+}
+@media screen and (max-width: 479px) {
+  body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper .portfolio-column {
+    gap: 10px;
+  }
+  body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper .portfolio-column:nth-child(2) {
+    display: none;
+  }
+}
+body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper .portfolio-column .portfolio-gallery-itm {
+  display: flex;
+}
+body main.main-content section.portfolio-section-wrap div.portfolio-gallery-section .portfolio-gallery-inner-wrapper .portfolio-column .portfolio-gallery-itm img.gallery-img {
+  width: 100%;
+  height: auto;
 }
 
 /*# sourceMappingURL=main.css.map */
