--- a/assets/styling/scss/pages/_home.scss
+++ b/assets/styling/scss/pages/_home.scss
@@ -239,6 +239,124 @@ body {
         }
       }
       // Portfolio Section ends here
+
+      // services Section
+      &.services-section-wrap {
+        padding: 90px 0;
+        overflow: hidden;
+
+        @media screen and (max-width: $breakpoint-lg) {
+          padding: 82px 0;
+        }
+        @media screen and (max-width: $breakpoint-md) {
+          padding: 68px 0;
+        }
+        @media screen and (max-width: $breakpoint-sm) {
+          padding: 52px 0;
+        }
+        @media screen and (max-width: $breakpoint-xsm) {
+          padding: 27px 0;
+        }
+
+        .services-section {
+          .heading-area {
+            p.section-label {
+              margin-left: auto;
+              margin-right: auto;
+            }
+          }
+
+          .services-cards {
+            margin-top: 50px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 27px;
+
+            @media screen and (max-width: $breakpoint-md) {
+              grid-template-columns: repeat(2, 1fr);
+            }
+            @media screen and (max-width: $breakpoint-sm) {
+              grid-template-columns: repeat(1, 1fr);
+            }
+
+            .service-card {
+              background-position: center;
+              background-size: cover;
+
+              .gradient-overlay {
+                width: 100%;
+                height: 100%;
+                aspect-ratio: 300/450;
+                @include flex-column;
+                justify-content: center;
+
+                transition: $transition;
+                background-image: linear-gradient(
+                  180deg,
+                  rgba($black, 0) 0,
+                  rgba($black, 0.6) 100%
+                );
+                padding: 30px;
+
+                @media screen and (max-width: $breakpoint-sm) {
+                  padding: 27px;
+                }
+
+                .content {
+                  width: 100%;
+                  text-align: center;
+
+                  .service-title {
+                    transition: $transition;
+                  }
+
+                  .service-desc {
+                    font-size: 0;
+                    line-height: 0;
+                    visibility: hidden;
+                    transition: 550ms visibility ease, 250ms font-size ease;
+
+                    margin-top: 20px;
+
+                    @media screen and (max-width: $breakpoint-sm) {
+                      margin-top: 15px;
+                    }
+                  }
+                }
+              }
+
+              &:hover {
+                .gradient-overlay {
+                  background-image: linear-gradient(
+                    180deg,
+                    rgba($black, 0) 0,
+                    rgba($black, 0.8) 40%
+                  );
+
+                  .content {
+                    .service-title {
+                      @extend h6;
+                      transition: $transition;
+                    }
+                    .service-desc {
+                      font-size: 16px;
+                      line-height: 24px;
+                      visibility: visible;
+                      transition: 550ms visibility ease, 250ms font-size ease;
+
+                      @media screen and (max-width: $breakpoint-xsm) {
+                        font-size: 14px;
+                        line-height: 20px;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      // services Section ends here
     }
   }
 }
