--- a/assets/styling/scss/pages/_home.scss
+++ b/assets/styling/scss/pages/_home.scss
@@ -357,6 +357,44 @@ body {
         }
       }
       // services Section ends here
+
+      // Rounded Banner Section
+      &.rounded-banner-section-wrap {
+        padding: 90px 0;
+
+        @media screen and (max-width: 1199px) {
+          padding: 82px 0;
+        }
+        @media screen and (max-width: 991px) {
+          padding: 68px 0;
+        }
+        @media screen and (max-width: 767px) {
+          padding: 52px 0;
+        }
+        @media screen and (max-width: 543px) {
+          padding: 27px 0;
+        }
+
+        .rounded-banner-section {
+          overflow: hidden;
+
+          .rounded-banner {
+            aspect-ratio: 1200/800;
+            overflow: hidden;
+            transition: border-radius 0.3s ease;
+            border-radius: 0.5px;
+
+            img.banner {
+              display: block;
+              width: 100%;
+              height: auto;
+              object-fit: cover;
+              transition: $transition;
+            }
+          }
+        }
+      }
+      // Rounded Banner Section ends here
     }
   }
 }
